# cpp_high_performance

./: CMakeLists.txt  Notes.md  README.md
chapter01/: CMakeLists.txt  abstractions.cpp  const_correctness.cpp  heap_allocations.cpp  references.cpp  value_semantics.cpp
chapter02/: CMakeLists.txt  auto.cpp  exception_safety.cpp  lambda.cpp  lambda_capture.cpp  lambda_generic.cpp  lambda_std_function.cpp  lambda_types.cpp  move_semantics.cpp  propagate_const.cpp
chapter02/benchmarks/: CMakeLists.txt  lambda_vs_stdfunction_benchmark.cpp
chapter03/: CMakeLists.txt  binary_search.cpp  insertion_sort.cpp  linear_search.cpp  linear_search_point.cpp  scoped_timer.cpp
chapter03/benchmarks/: CMakeLists.txt  complexity.cpp
chapter04/: CMakeLists.txt  cache_trashing.cpp  parallel_arrays.cpp  priority_queues.cpp  read_file_into_string.cpp  scoped_timer.hpp  sum_scores.cpp  unordered_sets.cpp
chapter05/: CMakeLists.txt  contains_duplicates.cpp  everyday_problems.cpp  generic_algorithms.cpp  grid.cpp  sorting.cpp  standard_algorithm_features.cpp
chapter05/benchmarks/: CMakeLists.txt  find_bm.cpp  sorting_bm.cpp
chapter06/: CMakeLists.txt  materialize_views.cpp  range_views.cpp  span.cpp  string_view.cpp  student.cpp  to_vector.hpp  understanding_views.cpp
chapter07/: CMakeLists.txt  alignement.cpp  arena.hpp  operator_new.cpp  padding.cpp  placement_new.cpp  polymorphic_memory_allocators.cpp  raii_connection.cpp  short_alloc.cpp  small_size_optimization.cpp  stack_memory.cpp  stack_size.cpp  user_arena.cpp
chapter08/: CMakeLists.txt  abbreviated_function_templates.cpp  compile_time_hash.cpp  constexpr_if_animals.cpp  constexpr_if_mod.cpp  constraints_and_concepts.cpp  integer_as_template_parameter.cpp  point2d_concepts.cpp  point2d_unconstrained.cpp  runtime_polymorphism_animals.cpp  safe_cast.cpp  static_assert.cpp  template_class.cpp  template_function.cpp  type_traits.cpp
chapter09/: CMakeLists.txt  any.cpp  example_projections.cpp  example_reflection.cpp  example_reflection.hpp  example_reflection_concepts.cpp  heterogenous_container_of_variants.cpp  optional.cpp  pair.cpp  tuple.cpp  tuple_accessing_elements.cpp  tuple_algorithms.cpp  variadic_template_parameter_pack.cpp  variant.cpp
chapter10/: CMakeLists.txt  pipe_operator.cpp  string_concat_proxy_tests.cpp  vec2d_length_proxy.hpp  vec2d_length_proxy_tests.cpp
chapter10/benchmarks/: CMakeLists.txt  string_concat_proxy_bm.cpp  vec2d_length_proxy_bm.cpp
chapter11/: CMakeLists.txt  async.cpp  atomics.cpp  avoid_deadlock.cpp  barriers.cpp  condition_variables.cpp  counter_atomic.cpp  counter_data_race.cpp  counter_mutex.cpp  future_and_promises.cpp  joinable_thread.cpp  latches.cpp  lock_free_queue.cpp  print_thread_id.cpp  semaphores.cpp  stop_token.cpp  tasks.cpp
chapter12/: CMakeLists.txt  dangling_references.cpp  entry_point.hpp  generator.hpp  generator_example.cpp  index_compression_example.cpp  initial_example.cpp  lin_space_callback.cpp  lin_space_coroutine.cpp  lin_space_eager.cpp  lin_space_iterator.cpp  lin_space_ranges.cpp  lin_value.hpp  main.cpp  passing_coroutines_around.cpp  resumable.hpp  resumable_minimal_example.cpp
chapter13/: CMakeLists.txt  asio_server.cpp  asio_timer_callback.cpp  asio_timer_coro.cpp  entry_point.hpp  sync_wait.hpp  task.hpp  task_ex.cpp
chapter14/: CMakeLists.txt  copy_if.hpp  copy_if_tests.cpp  count_if.cpp  index_based_loop.cpp  parallel_policy.cpp  reduce_foreach.cpp  transform.hpp  transform_tests.cpp
chapter14/benchmarks/: CMakeLists.txt  copy_if_bm.cpp  transform_divide_and_conquer.cpp  transform_naive_bm.cpp
